manifest/mariadb.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mariadb-vol
  labels:
    app: mariadb-vol
  namespace: proyecto-integrador
spec:
  containers:
    - name: mariadb
      image: mariadb:latest
      ports:
        - containerPort: 3306
          protocol: TCP
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: pv-storage
  volumes:
    - name: pv-storage
      persistentVolumeClaim: 
        claimName: storage-local-1
