manifest/drupal_without_vol.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-drupal-without-vol
  labels:
    app: drupal
    tier: frontend
    vol: without
spec:  
  type: NodePort
  ports:
  - port: 80
  selector:
    app: drupal
    tier: frontend
    vol: without
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: dropal.without.vol
  labels:
    app: dropal.without.vol
spec:
  selector:
    matchLabels:
      app: drupal
      tier: frontend
      vol: without
  replicas: 1
  template:
    metadata:
      labels:
        app: drupal
        tier: frontend
        vol: without
    spec:
      containers:
      - name: drupal
        image: drupal:latest
